// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButton /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      buttonColor="#fffeee"
      className="sc-81b2b9f2-0 lfCfRF"
      labelColor="#fff"
      type="facebook"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-facebook"
        />
      </span>
      <a
        href="/login/facebook?_destination=http://localhost/"
        title="facebook"
      >
        Facebook
      </a>
    </div>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly franceConnect 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL eoJDMo cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-81b2b9f2-1 jBCKZe"
      justifyContent="center"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL hthoxn"
    >
      <a
        className="sc-bcXGCL ddVvfA cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL gtydaQ cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly with grandLyonConnect 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-81b2b9f2-2 gEyldl"
  >
    <a
      href="/login/openid?_destination=http://localhost/"
      title="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-grandLyonConnect"
        />
      </span>
    </a>
  </div>,
]
`;

exports[`<LoginSocialButton /> should render correctly with switchusermode 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div>
    <div
      buttonColor="#fffeee"
      className="sc-81b2b9f2-0 ZBRFF"
      labelColor="#fff"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          openid
        </span>
      </a>
    </div>
  </div>,
]
`;
